# kconfig-lsp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: analysis.rs  ast.rs  completion.rs  definition.rs  diagnostics.rs  hover.rs  lexer.rs  lib.rs  main.rs  parser.rs  references.rs  server.rs
tests/: parse_kernel_kconfig.rs
