[package]
name = "kconfig-lsp"
version = "0.1.0"
edition = "2024"
description = "A language server for Kconfig files used in Linux, Zephyr, U-Boot, and coreboot"
repository = "https://github.com/cccheng/kconfig-lsp"
readme = "README.md"
license = "MIT"
keywords = ["kconfig", "lsp", "kernel"]

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 2
lto = true
